--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nafisa Zaman Faiza</title>
+    <title> Faiza`s World</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
+<body>
+    <section class="top-bannar">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="one">Faiza`s</span> World </h1>
+            <h2> <b> About Myself</b> </h2>
+            <p>
+                I am Nafisa Zaman Faiza. I was born on 18/04/2022. My father's name: Nafi uz Zaman Pial and my mother's
+                name
+                is Halima. Currently I am 07 months old. I can now sit down and make some noise.</p>
+            <a class="fb" target="_blank" href="https://www.facebook.com/mn.pial/"> Hire Me</a>
+        </div>
+        <div class="half-width"><img src="images/f1.PNG" alt=""></div>
+    </section>
 </body>
+
 </html>
