--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-bannar">
+    <section class="top-bannar flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="one">Faiza`s</span> World </h1>
@@ -26,6 +26,39 @@
         </div>
         <div class="half-width"><img src="images/f1.PNG" alt=""></div>
     </section>
+    <section class="two flexible-container">
+        <div class="half-width"> <img src="images/my-bg.jpg" alt="">
+        </div>
+        <div class="half-width">
+            <h1> My Current Status</h1>
+            <h2>08 months 01 days</h2>
+            <p>Now I am 8 months 01 days old. I can sit now. I can eat rice, fish, eggs, potatoes. Dad brings lollipops
+                for me. I suck it up. I can also call in different ways.</p>
+            <a class="fb" target="_blank" href=> Downkoad My Pic </a>
+
+        </div>
+    </section>
+    <section class="experience">
+        <h1>Experience</h1>
+        <div class="flexible-container">
+            <div id="full-stack-web-developer" class="experience-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="one">2022-Present / Pro Level Devoloper</h3>
+                <p>Now I am 8 months 01 days old. I can sit now. I can eat rice, fish, eggs, potatoes. Dad brings
+                    lollipops
+                    for me. I suck it up. I can also call in different ways.</p>
+            </div>
+            <div id="baby-web-developer" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="one">2022-2024 Hero Devoloper</h3>
+                <p>I am Nafisa Zaman Faiza. I was born on 18/04/2022. My father's name: Nafi uz Zaman Pial and my
+                    mother's
+                    name
+                    is Halima. Currently I am 07 months old. I can now sit down and make some noise.</p>
+            </div>
+
+    </section>
 </body>
+<footer>@ MN PIAL 2022, Programming Code.</footer>
 
 </html>
